--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 </div>
             </div>
 
-            <div class="status-bar">
+            <div class="status-bar" style="display: flex; align-items: center; gap: 8px;">
+                <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
+                    title="Connecting..."></div>
                 <span data-i18n="static_note">GTFS Estático</span>
             </div>
         </div>
