--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body data-theme="light">
 
     <div id="loading-screen">
-        <div class="loader"></div>
+        <img src="assets/loader_v2.gif" alt="Cargando...">
         <h2 id="loading-text">Cargando...</h2>
     </div>
 
@@ -25,44 +25,43 @@
 
         <div class="header-panel">
             <div class="header-top">
-                <h1 data-i18n="title">Metro Bilbao</h1>
+                <h1 data-i18n="title">
+                    <img src="assets/Símbolo_del_Metro_de_Bilbao.png" alt="Metro Bilbao" class="logo">
+                    Metro Bilbao
+                </h1>
                 <div id="clock" style="font-family: monospace; font-size: 1.1rem;">00:00:00</div>
-            </div>
-
-            <div class="controls">
-                <button id="btn-theme" data-i18n="toggle_theme">Tema</button>
-                <div style="display: flex; border: 1px solid #ccc; border-radius: 4px; overflow: hidden;">
-                    <button id="btn-lang-es" style="border:none; border-radius:0;">ES</button>
-                    <button id="btn-lang-eu" style="border:none; border-radius:0;">EU</button>
-                </div>
             </div>
 
             <div class="status-bar" style="display: flex; align-items: center; gap: 8px;">
                 <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
                     title="Connecting..."></div>
-                <span data-i18n="static_note">GTFS Estático</span>
+                <span data-i18n="static_note">Datos en tiempo real</span>
             </div>
         </div>
 
-        <div class="legend-panel">
-            <div class="legend-item">
-                <span class="legend-icon icon-train"></span>
-                <span data-i18n="legend_train">Tren</span>
-            </div>
-            <div class="legend-item">
-                <span class="legend-icon icon-station"></span>
-                <span data-i18n="legend_station">Estación</span>
-            </div>
+    </div>
 
-            <hr style="margin: 0.5rem 0; border: 0; border-top: 1px solid var(--border-color);">
+    <!-- Layer Toggle Button -->
+    <button id="layer-toggle-btn" class="layer-toggle-btn" title="Cambiar capa del mapa">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+            <path
+                d="M11.99 18.54l-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27-7.38 5.74zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27L12 16z" />
+        </svg>
+    </button>
 
-            <div style="display: flex; gap: 0.5rem;">
-                <button id="btn-layer-std" data-i18n="layer_standard" style="flex:1; font-size: 0.8rem;">Mapa</button>
-                <button id="btn-layer-sat" data-i18n="layer_satellite"
-                    style="flex:1; font-size: 0.8rem;">Satélite</button>
+    <div id="info-panel" class="info-panel">
+        <div class="panel-header">
+            <div class="panel-title">
+                <h2 id="panel-title-text">Detalles</h2>
+                <p id="panel-subtitle-text">Información</p>
             </div>
+            <button id="close-panel-btn" class="close-btn">&times;</button>
         </div>
-
+        <div id="panel-content" class="panel-content">
+            <!-- Dynamic content will be injected here -->
+            <p style="padding: 20px; text-align: center; color: #666;">Selecciona un tren o estación para ver
+                información.</p>
+        </div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
