--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metro Bilbao - GTFS Viewer</title>
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-
     <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body data-theme="light">
-
     <div id="loading-screen">
         <img src="assets/loader_v2.gif" alt="Cargando...">
         <h2 id="loading-text">Cargando...</h2>
     </div>
-
     <div id="map"></div>
-
     <div class="ui-overlay">
-
         <div class="header-panel">
             <div class="header-top">
                 <h1 data-i18n="title">
@@ -31,24 +23,19 @@
                 </h1>
                 <div id="clock" style="font-family: monospace; font-size: 1.1rem;">00:00:00</div>
             </div>
-
             <div class="status-bar" style="display: flex; align-items: center; gap: 8px;">
                 <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
                     title="Connecting..."></div>
                 <span data-i18n="static_note">Datos en tiempo real</span>
             </div>
         </div>
-
     </div>
-
-    <!-- Layer Toggle Button -->
     <button id="layer-toggle-btn" class="layer-toggle-btn" title="Cambiar capa del mapa">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
             <path
                 d="M11.99 18.54l-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27-7.38 5.74zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27L12 16z" />
         </svg>
     </button>
-
     <div id="info-panel" class="info-panel">
         <div class="panel-header">
             <div class="panel-title">
@@ -58,16 +45,12 @@
             <button id="close-panel-btn" class="close-btn">&times;</button>
         </div>
         <div id="panel-content" class="panel-content">
-            <!-- Dynamic content will be injected here -->
             <p style="padding: 20px; text-align: center; color: #666;">Selecciona un tren o estación para ver
                 información.</p>
         </div>
     </div>
-
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-
     <script type="module" src="js/app.js"></script>
 </body>
-
 </html>
