--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body data-theme="light">
     <div id="loading-screen">
         <img src="assets/loader_v2.gif" alt="Cargando...">
@@ -27,6 +29,12 @@
                 <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
                     title="Connecting..."></div>
                 <span data-i18n="static_note">Datos en tiempo real</span>
+            </div>
+        </div>
+        <div class="search-panel">
+            <div class="search-container">
+                <input type="text" id="station-search" class="search-input" placeholder="Buscar estación...">
+                <div id="search-results" class="search-results"></div>
             </div>
         </div>
     </div>
@@ -53,4 +61,5 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script type="module" src="js/app.js"></script>
 </body>
+
 </html>
