mas fixes de textos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metro Bilbao - GTFS Viewer</title>
+    <title>Metro Bilbao - Tiempo Real</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="css/styles.css">
@@ -28,7 +28,8 @@
             <div class="status-bar" style="display: flex; align-items: center; gap: 8px;">
                 <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
                     title="Connecting..."></div>
-                <span data-i18n="static_note">Datos en tiempo real</span>
+                <span data-i18n="static_note">Datos en tiempo real. La posición de los trenes es simulada y puede no ser
+                    precisa.</span>
             </div>
         </div>
         <div class="search-panel">
