--- a/index.html
+++ b/index.html
@@ -5,59 +5,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metro Bilbao - Tiempo Real</title>
+    <!-- Dependencias de Leaflet para el motor de mapas -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <!-- Estilos personalizados del proyecto -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body data-theme="light">
+    <!-- Pantalla de carga inicial (loader) -->
     <div id="loading-screen">
         <img src="assets/loader_v2.gif" alt="Cargando...">
-        <h2 id="loading-text">Cargando...</h2>
+        <h2 id="loading-text">Cargando sistema...</h2>
     </div>
+
+    <!-- Contenedor principal del mapa interactivo -->
     <div id="map"></div>
+
+    <!-- Capa de interfaz de usuario (UI Overlay) -->
     <div class="ui-overlay">
+        <!-- Panel superior: Título, logotipo y reloj -->
         <div class="header-panel">
             <div class="header-top">
-                <h1 data-i18n="title">
+                <h1>
                     <img src="assets/Símbolo_del_Metro_de_Bilbao.png" alt="Metro Bilbao" class="logo">
                     Metro Bilbao
                 </h1>
                 <div id="clock" style="font-family: monospace; font-size: 1.1rem;">00:00:00</div>
             </div>
+            <!-- Barra de estado y avisos legales -->
             <div class="status-bar" style="display: flex; align-items: center; gap: 8px;">
                 <div id="rt-status" style="width: 8px; height: 8px; border-radius: 50%; background-color: #ccc;"
-                    title="Connecting..."></div>
-                <span data-i18n="static_note">Datos en tiempo real. La posición de los trenes es simulada y puede no ser
-                    precisa.</span>
+                    title="Estado de conexión"></div>
+                <span>Datos en tiempo real. La posición de los trenes es simulada y aproximada.</span>
             </div>
         </div>
+
+        <!-- Panel de búsqueda de estaciones -->
         <div class="search-panel">
             <div class="search-container">
-                <input type="text" id="station-search" class="search-input" placeholder="Buscar estación...">
+                <input type="text" id="station-search" class="search-input" placeholder="Buscar estación por nombre...">
                 <div id="search-results" class="search-results"></div>
             </div>
         </div>
     </div>
-    <button id="layer-toggle-btn" class="layer-toggle-btn" title="Cambiar capa del mapa">
+
+    <!-- Botón flotante para cambiar el estilo del mapa -->
+    <button id="layer-toggle-btn" class="layer-toggle-btn" title="Alternar estilo de mapa (Satélite/Estándar)">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
             <path
                 d="M11.99 18.54l-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27-7.38 5.74zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27L12 16z" />
         </svg>
     </button>
+
+    <!-- Panel lateral informativo (Detalles de tren/estación) -->
     <div id="info-panel" class="info-panel">
         <div class="panel-header">
             <div class="panel-title">
                 <h2 id="panel-title-text">Detalles</h2>
-                <p id="panel-subtitle-text">Información</p>
+                <p id="panel-subtitle-text">Información del servicio</p>
             </div>
-            <button id="close-panel-btn" class="close-btn">&times;</button>
+            <button id="close-panel-btn" class="close-btn" title="Cerrar panel">&times;</button>
         </div>
         <div id="panel-content" class="panel-content">
-            <p style="padding: 20px; text-align: center; color: #666;">Selecciona un tren o estación para ver
-                información.</p>
+            <p style="padding: 20px; text-align: center; color: #666;">Selecciona un tren o estación en el mapa para ver
+                los detalles.</p>
         </div>
     </div>
+
+    <!-- Scripts de la aplicación -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script type="module" src="js/app.js"></script>
